--- a/.idlerc/config-highlight.cfg
+++ b/.idlerc/config-highlight.cfg
@@ -15,7 +15,7 @@ keyword-foreground = #e89136
 break-background = #808000
 builtin-foreground = #5f9d5f
 string-background = #46657e
-normal-background = #1c2230
+normal-background = #1e1f28
 error-foreground = #FFFFFF
 comment-background = #46657e
 stdout-foreground = #c2d1fa
